--- a/index.html
+++ b/index.html
@@ -2,20 +2,28 @@
 <head>
     <title>Nonce Words Data Parser</title>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="parser.js"></script>
 
 
     <script type="text/javascript">
     $(document).ready(function() { // do stuff when DOM is ready
-       $("#submit_button").click(function() {
+        // #submit_button_1 is for 'analyze 1 word for RSA and length'
+        // #submit_button_2 is for 'analyze 2 words for RSA and length'
+        // #submit_button_3 is for 'analyze words for Levenshtein Distance'
+
+        // todo: area_1 and 3 stuff
+
+
+        $("#submit_button_2").click(function() {
             var QUICK_TEST = false;
             if (QUICK_TEST) {
                 testSpaceRemoval();
                 // testIncludeMethod();
             } else {
-                text = $("#input_area").val();
-                output = transform(text);
-                $("#output_area").val(output);
+                var text = $("#input_area_2").val();
+                var output = transform(text);
+                $("#output_area_2").val(output);
             }
         });
     });
@@ -23,8 +31,14 @@
 </head>
 <body style="text-align:center">
     <h1>Nonce Words Data Parser</h1>
-    <textarea id="input_area" placeholder="Edit me" cols="30" rows="15"></textarea><br>
-    <input id="submit_button" type="submit" value="Submit"><br><!--alternative is onclick="parse()"-->
-    <textarea id="output_area" readonly placeholder="Output will be here" cols="50" rows="15"></textarea><br>
+    <div id="area_2" class="analysis_area">
+        <h2>Analyze 2 words for RSA and Length</h2>
+        <!--add example with a href=# soon-->
+
+        <textarea id="input_area_2" placeholder="Edit me" cols="30" rows="15"></textarea><br>
+        <input id="submit_button_2" type="submit" value="Submit"><br><!--alternative is onclick="parse()"-->
+        <textarea id="output_area_2" readonly placeholder="Output will be here" cols="50" rows="15"></textarea><br>    
+    </div>
+    
 </body>
 </html>
