--- a/index.html
+++ b/index.html
@@ -13,31 +13,97 @@
         // #submit_button_3 is for 'analyze words for Levenshtein Distance'
 
         // todo: area_1 and 3 stuff
+        /* area_1 things*/
+        $("#instructions__toggle_1").click(function() {
+            $("#instructions_1").toggle();
+        });
+        $("#submit_button_1").click(function() {
+            var QUICK_TEST = false;
+            if (QUICK_TEST) {
+                // testSpaceRemoval();
+                // testIncludeMethod();
+            } else {
+                var text = $("#input_area_1").val();
+                var output = transform1ColumnForRSAAndLength(text);
+                $("#output_area_1").val(output);
+            }
+        });
 
-
+        /* area_2 things*/
+        $("#instructions__toggle_2").click(function() {
+            $("#instructions_2").toggle();
+        });
         $("#submit_button_2").click(function() {
             var QUICK_TEST = false;
             if (QUICK_TEST) {
-                testSpaceRemoval();
+                // testSpaceRemoval();
                 // testIncludeMethod();
             } else {
                 var text = $("#input_area_2").val();
-                var output = transform(text);
+                var output = transform2ColumnsForRSAAndLength(text);
                 $("#output_area_2").val(output);
             }
         });
     });
     </script>
 </head>
-<body style="text-align:center">
-    <h1>Nonce Words Data Parser</h1>
-    <div id="area_2" class="analysis_area">
-        <h2>Analyze 2 words for RSA and Length</h2>
-        <!--add example with a href=# soon-->
+<body>
+    <h1>Nonce Words Data Parser (currently undergoing changes)</h1>
+    <hr>
+    <div id="content" class="myborder">
+        <!--Area 1-->
+        <div id="area_1" class="analysis_area myborder">
+            <span class="analysis_area_title">Analyze 1 word for RSA and Length</span>
+            <br>
+            <a href="javascript:void(0);" id="instructions__toggle_1">Instructions</a>
+            <div id="instructions_1" class="myborder instructions" style="display:none">
+                Example input:
+                <pre>
+hugged
+smiled
+picked on
+helped
+                </pre>
+                Example output:
+                <pre>
+                </pre>
+            </div>
 
-        <textarea id="input_area_2" placeholder="Edit me" cols="30" rows="15"></textarea><br>
-        <input id="submit_button_2" type="submit" value="Submit"><br><!--alternative is onclick="parse()"-->
-        <textarea id="output_area_2" readonly placeholder="Output will be here" cols="50" rows="15"></textarea><br>    
+            <div>
+                <textarea id="input_area_1" placeholder="Edit me" cols="30" rows="15"></textarea><br>
+                <input id="submit_button_1" type="submit" value="Submit"><br><!--alternative is onclick="parse()"-->
+                <textarea id="output_area_1" readonly placeholder="Output will be here" cols="50" rows="15"></textarea><br>    
+            </div>
+        </div>
+        <hr>
+        <!--Area 2-->
+        <div id="area_2" class="analysis_area myborder">
+            <span class="analysis_area_title">Analyze 2 words for RSA and Length</span>
+            <br>
+            <a href="javascript:void(0);" id="instructions__toggle_2">Instructions</a>
+            <div id="instructions_2" class="myborder instructions" style="display:none">
+                Example input:
+                <pre>
+stoofed, hugged
+jorred, smiled
+ludded, picked on
+itched, helped
+                </pre>
+                Example output:
+                <pre>
+stoofed,-3,7,hugged,-2,6,-1
+jorred,-2,6,smiled,0,6,-2
+ludded,-2,6,picked on,2,8,-4
+itched,-2,6,helped,0,6,-2
+                </pre>
+            </div>
+
+            <div>
+                <textarea id="input_area_2" placeholder="Edit me" cols="30" rows="15"></textarea><br>
+                <input id="submit_button_2" type="submit" value="Submit"><br><!--alternative is onclick="parse()"-->
+                <textarea id="output_area_2" readonly placeholder="Output will be here" cols="50" rows="15"></textarea><br>    
+            </div>
+        </div>
     </div>
     
 </body>
