fixed left letter list to have 'v' and not 'y'

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             RSA is "right-side advantage": <br># of letters from right side of keyboard - # of letters from left side of keyboard
         </li>
         <li>
-            Left-side letters: ['q','w','e','r','t','a','s','d','f','g','z','x','c','y','b']<br>
+            Left-side letters: ['q','w','e','r','t','a','s','d','f','g','z','x','c','v','b']<br>
             Right-side letters:  ['y','u','i','o','p','h','j','k','l','n','m']
         </li>
     </div>
