--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         // #submit_button_1 is for 'analyze 1 word for RSA and length'
         // #submit_button_2 is for 'analyze 2 words for RSA and length'
         // #submit_button_3 is for 'analyze words for Levenshtein Distance'
-        // #submit_button_x is for quick hacks..
+        // #submit_button_x_1 is for quick hacks..
 
         // todo: area_1 and 3 stuff
         /* area_1 things */
@@ -77,8 +77,10 @@
                 // testSpaceRemoval();
                 // testIncludeMethod();
             } else {
-                var text = $("#input_area_x").val();
-                var output = gatherOutputMatching(text);
+                var text1 = $("#input_area_x_1").val(); // our data
+                var text2 = $("#input_area_x_2").val(); // their data
+
+                var output = gatherOutputMatching(text1, text2);
                 $("#output_area_x").val(output);
             }
         });
@@ -189,11 +191,11 @@ helped,held,2
         <div id="area_4" class="analysis_area">
             <span class="analysis_area_title">Quick matching of our data (misc.)</span>
             <br>
-            
             <div>
-                <textarea id="input_area_x" placeholder="Edit me" cols="30" rows="15"></textarea><br>
+                <textarea id="input_area_x_1" placeholder="Edit our data" cols="30" rows="15"></textarea><br>
+                <textarea id="input_area_x_2" placeholder="Edit their data" cols="30" rows="15"></textarea><br>
                 <input id="submit_button_x" type="submit" value="Submit"><br><!--alternative is onclick="parse()"-->
-                <textarea id="output_area_x" readonly placeholder="Output will be here" cols="50" rows="15"></textarea><br>    
+                <textarea id="output_area_x" readonly placeholder="Output will be here" cols="50" rows="15"></textarea><br>
             </div>
         </div>
     </div>
