--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         // #submit_button_1 is for 'analyze 1 word for RSA and length'
         // #submit_button_2 is for 'analyze 2 words for RSA and length'
         // #submit_button_3 is for 'analyze words for Levenshtein Distance'
-        // #submit_button_x_1 is for quick hacks..
+        // #submit_button_x_1 is for quick hacks: currently, just 'Quick matching for our data'
 
         // todo: area_1 and 3 stuff
         /* area_1 things */
@@ -74,8 +74,7 @@
         $("#submit_button_x").click(function() {
             var QUICK_TEST = false;
             if (QUICK_TEST) {
-                // testSpaceRemoval();
-                // testIncludeMethod();
+                // testCloseEnough();
             } else {
                 var text1 = $("#input_area_x_1").val(); // our data
                 var text2 = $("#input_area_x_2").val(); // their data
@@ -192,8 +191,8 @@ helped,held,2
             <span class="analysis_area_title">Quick matching of our data (misc.)</span>
             <br>
             <div>
-                <textarea id="input_area_x_1" placeholder="Edit our data" cols="30" rows="15"></textarea><br>
-                <textarea id="input_area_x_2" placeholder="Edit their data" cols="30" rows="15"></textarea><br>
+                <textarea id="input_area_x_1" placeholder="Insert OUR data" cols="30" rows="15"></textarea><br>
+                <textarea id="input_area_x_2" placeholder="Insert THEIR data" cols="30" rows="15"></textarea><br>
                 <input id="submit_button_x" type="submit" value="Submit"><br><!--alternative is onclick="parse()"-->
                 <textarea id="output_area_x" readonly placeholder="Output will be here" cols="50" rows="15"></textarea><br>
             </div>
