--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
     <title>Nonce Words Data Parser</title>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <script src="parser.js"></script>
+
+    <script src="helper.js"></script>
+    <script src="test.js"></script>
+    <script src="main.js"></script>
 
 
     <script type="text/javascript">
@@ -74,7 +77,7 @@
         $("#submit_button_x").click(function() {
             var QUICK_TEST = false;
             if (QUICK_TEST) {
-                // testCloseEnough();
+                testCloseEnough();
             } else {
                 var text1 = $("#input_area_x_1").val(); // our data
                 var text2 = $("#input_area_x_2").val(); // their data
