--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 
     <script src="helper.js"></script>
+    <script src="verb_reader.js"></script>
     <script src="test.js"></script>
     <script src="main.js"></script>
 
